# zig-mobile-runner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  LICENSE  README.md  SECURITY.md  build.zig  build.zig.zon  go.work  package.json
clients/: README.md
clients/python/: README.md  pyproject.toml  zmr_client.py
clients/python/examples/: fake_session.py
docs/: ai-agents.md  app-integration.md  benchmarking.md  client-installation.md  clients.md  config.md  demo.md  dsl.md  install.md  market-positioning.md  npm.md  protocol-versioning.md  protocol.md  publication.md  release-audit.md  release-candidate.md  release-evidence.md  release-notes-template.md  roadmap.md  scenario-authoring.md  shipping.md  trace-privacy.md  troubleshooting.md
examples/: android-app-auth-probe.json  android-app-error-state.json  android-app-login-smoke.json  android-app-onboarding.json  android-app-referral-deep-link.json  android-shim-smoke.json  demo-failure.json  demo-fake.json  ios-dev-client-open-link.json  ios-dev-client-route-snapshot.json  ios-shim-smoke.json  ios-smoke.json
npm/: agents.mjs  app-config.mjs  build-zmr.mjs  commands.mjs  generated-files.mjs  index.mjs  init-app.mjs  package-scripts.mjs  postinstall.mjs  scaffold.mjs  scenarios.mjs  setup.mjs  wizard.mjs  zmr.mjs
schemas/: README.md  action-result.schema.json  capabilities-output.schema.json  devices-output.schema.json  doctor-output.schema.json  explain-output.schema.json  import-output.schema.json  init-output.schema.json  json-rpc.schema.json  release-manifest.schema.json  run-output.schema.json  (+10 more)
(+272 files in other folders)
