[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zmr-client"
version = "0.1.0.dev1"
description = "Python JSON-RPC client for Zig Mobile Runner."
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.setuptools]
py-modules = ["zmr_client"]
